LendersApp/src/objects/Underwriter_Assignment_Rule_Member__c.object
<CustomObject>
    <fields>
        <fullName>Last_Assignment_Date_Time__c</fullName>
        <label>Last Assignment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <label>Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriter_Assignment_Rule__c</fullName>
        <label>Underwriter Assignment Rule</label>
        <referenceTo>Underwriter_Assignment_Rule__c</referenceTo>
        <relationshipLabel>Underwriter Assignment Rule Members</relationshipLabel>
        <relationshipName>Underwriter_Assignment_Rule_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Underwriter_Reassignment_Enabled__c</fullName>
        <formula>Underwriter__r.Underwriter_Reassignment_Enabled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Underwriter Reassignment Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Underwriter_Assignment_Rule_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Underwriter Assignment Rule Member</label>
    <nameField>
        <displayFormat>UAM-{000000}</displayFormat>
        <label>Underwriter Assignment Rule Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Underwriter Assignment Rule Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>